--- a/ui/ExportDer.ui
+++ b/ui/ExportDer.ui
@@ -252,6 +252,8 @@ p, li { white-space: pre-wrap; }
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <tabstops>
   <tabstop>filename</tabstop>
+  <tabstop>fileBut</tabstop>
+  <tabstop>exportFormat</tabstop>
   <tabstop>PushButton7</tabstop>
   <tabstop>PushButton9</tabstop>
  </tabstops>
