--- a/ui/TrustState.ui
+++ b/ui/TrustState.ui
@@ -1,4 +1,7 @@
 <ui version="4.0" >
+ <author></author>
+ <comment></comment>
+ <exportmacro></exportmacro>
  <class>TrustState</class>
  <widget class="QDialog" name="TrustState" >
   <property name="geometry" >
@@ -192,20 +195,16 @@
    </item>
   </layout>
  </widget>
+ <pixmapfunction></pixmapfunction>
  <customwidgets>
   <customwidget>
    <class>ClickLabel</class>
-   <extends>QLabel</extends>
+   <extends></extends>
    <header>widgets/clicklabel.h</header>
+   <container>0</container>
+   <pixmap></pixmap>
   </customwidget>
  </customwidgets>
- <tabstops>
-  <tabstop>trust0</tabstop>
-  <tabstop>trust1</tabstop>
-  <tabstop>trust2</tabstop>
-  <tabstop>PushButton4</tabstop>
-  <tabstop>PushButton5</tabstop>
- </tabstops>
  <resources/>
  <connections>
   <connection>
